<resources>
    <string name="app_name">FunFindr</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_firstname">Firstname</string>
    <string name="prompt_lastname">Lastname</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="blurb">...a world of excitement...</string>
    <string name="description_logo">This is the text logo</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Register</string>
    <string name="questionHaveAccount">No account yet?</string>
    <string name="signup">Signup</string>
    <string name="signup_now">Signup Now</string>
    <string name="buttonUploadImage">Upload Profile Image</string>
    <string name="title_activity_main_ui">MainUIActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Search String Values -->
    <string name="search_favorites">Search favorites...</string>
    <string name="search_events">Search events...</string>

    <!-- Menu String Values -->
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_events">Events</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_information">Information</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_title_tools">Tools</string>
    <string name="menu_title_communicate">Communicate</string>
    <string name="menu_title_account">Account</string>

    <!-- Favorties Card View -->
    <string name="text_place_name">Sample Place Name</string>
    <string name="text_place_address">1000 Sample Ave, Vancouver BC V5C 1A1</string>
    <string name="type_place">Place Type</string>
    <string name="buttonShowOnMap">Show on map</string>

    <!-- Events Card View -->
    <string name="text_event_name">Sample Event Name</string>
    <string name="text_event_time">8:30 PM (20-Mar-2020)</string>
    <string name="type_event">Event Type</string>
    <string name="text_event_location">Location</string>

    <!-- Events Types Array -->
    <string name="enter_event_name">Name of event</string>

    <!-- Events Form -->
    <string name="select_event_type">Type of event</string>
    <string name="enter_event_location">Location of event</string>
    <string name="enter_event_address">Venue Address</string>
    <string name="enter_event_notes">Notes...</string>
    <string name="enter_event_date">Date and Time</string>
    <string name="events_form_title">Create a new Event</string>
    <string name="events_form_title_edit">Edit Event</string>
    <string name="buttonSubmit">Submit</string>

    <!-- Buttons -->
    <string name="button_map_find">Find Restaurants</string>
    <string name="button_map_add_to_favorites">Add to Favorites</string>

    <!-- Arrays -->
    <string-array name="event_types">
        <item>Birthday</item>
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Date</item>
        <item>Dinner</item>
        <item>Hangout</item>
        <item>Lunch</item>
        <item>Party</item>
        <item>Workout</item>
    </string-array>
</resources>
