<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewEventTitleEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:text="@string/events_form_title_edit"
            android:textColor="@color/colorFunFindrBlue"
            android:gravity="center"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CalendarView
            android:id="@+id/calendarViewEventEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventTitleEdit"
            />

        <TimePicker
            android:id="@+id/timePickerEventTimeEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarViewEventEdit"
            android:autofillHints="@string/text_event_time"
            android:timePickerMode="spinner"/>

        <EditText
            android:id="@+id/editTextEventNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_event_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timePickerEventTimeEdit"
            android:backgroundTint="@color/colorFunFindrBlue" />

        <EditText
            android:id="@+id/editTextEventLocationEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_event_location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEventNameEdit"
            android:backgroundTint="@color/colorFunFindrBlue" />

        <EditText
            android:id="@+id/editTextEventAddressEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_event_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEventLocationEdit"
            android:backgroundTint="@color/colorFunFindrBlue" />

        <EditText
            android:id="@+id/editTextEventNotesEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/enter_event_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEventAddressEdit"
            android:backgroundTint="@color/colorFunFindrBlue" />

        <Spinner
            android:id="@+id/spinnerEventTypeEdit"
            android:layout_width="207dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:prompt="@string/select_event_type"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEventNotesEdit"
            app:layout_constraintVertical_bias="1.0"
            android:backgroundTint="@color/colorFunFindrBlue" />

        <Button
            android:id="@+id/buttonSubmitEdit"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerEventTypeEdit"
            app:layout_constraintVertical_bias="1.0"
            android:text="@string/buttonSubmit"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/colorFunFindrBlue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>