<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:paddingHorizontal="16dp"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:background="@drawable/round_image"
            android:src="@drawable/logo_login"
            android:layout_gravity="center"
            android:padding="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/textViewPlaceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_place_name"
                android:textSize="16dp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/textViewPlaceAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_place_address"
                android:textSize="12dip"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/textTypeOfPlaceIcon"
                    android:layout_width="40dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_menu_favorite_black_24dp" />

                <TextView
                    android:id="@+id/textTypeOfPlace"
                    android:paddingLeft="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/type_place"
                    android:textColor="@color/colorFunFindrBlue" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonShowOnMap"
                android:layout_marginTop="8dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/button_white"
                android:drawableLeft="@drawable/ic_map_red_24dp"
                android:drawablePadding="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/buttonShowOnMap"
                android:textSize="12dip" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>