<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="0dp"
    android:layout_marginVertical="16dp"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    app:cardBackgroundColor="@color/colorWhite">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/titleDeleteContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewEventName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:layout_gravity="center_vertical"
                android:text="@string/text_event_name"
                android:textColor="@color/colorBlack"
                android:textSize="16dp"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewEditButton"
                android:layout_width="0dip"
                android:layout_height="24dip"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_edit_black_24dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/imageViewDeleteButton"
                android:layout_width="0dip"
                android:layout_height="24dip"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_delete_red_24dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewEventTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/text_event_time"
            android:drawableLeft="@drawable/ic_menu_calendar_black_24dp"
            android:gravity="center_vertical"
            android:drawablePadding="4dp"
            android:textSize="12dip"
            app:layout_constraintTop_toBottomOf="@+id/titleDeleteContainer"/>

        <TextView
            android:id="@+id/textTypeOfEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:text="@string/type_event"
            android:textColor="@color/colorOrange"
            android:textSize="14dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:drawablePadding="4dip"
            android:drawableLeft="@drawable/ic_restaurant_menu_orange24dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewEventTime"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textTypeOfEvent">

            <TextView
                android:id="@+id/textViewPlaceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_place_name"
                android:textColor="@color/colorBlack"
                android:textSize="14dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:drawablePadding="4dip"
                android:drawableLeft="@drawable/ic_map_marker_red_24dp"/>


            <Button
                android:id="@+id/buttonEventShowOnMap"
                android:layout_marginTop="8dip"
                android:layout_marginLeft="16dip"
                android:layout_weight=".5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/button_white"
                android:drawableLeft="@drawable/ic_map_red_24dp"
                android:drawablePadding="8dp"
                android:paddingHorizontal="16dp"
                android:text="@string/buttonShowOnMap"
                android:textSize="12dip"
                app:layout_constraintTop_toBottomOf="@+id/textViewPlaceName"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>